# altair_framework

./: .gitignore  README.md  build.sh  modules_config.json  run_nuc.sh  run_operator.sh
.antigravitycli/: 21ff818f-bedc-404f-ab0c-2995ebe4976f.json
altair_can_bridge/: CMakeLists.txt  package.xml
altair_can_bridge/scripts/: setup_slcan.sh
altair_can_bridge/src/: can_bridge_node.cpp
altair_core/: package.xml  setup.cfg  setup.py
altair_core/altair_core/: base_behavior.py  behavior_runner.py  module_manager.py
altair_core/config/: modules_config.json
altair_core/profiles/: base_only_profile.json  default_profile.json
altair_core/user_behaviors/: example_behavior.py  template_behavior.py
altair_interfaces/: CMakeLists.txt
altair_interfaces/msg/: CanStatus.msg  MddFeedback.msg  ServoCommand.msg  SolenoidCommand.msg
altair_interfaces/srv/: GetAvailablePorts.srv  TriggerControl.srv
altair_web_server/: package.xml  setup.cfg  setup.py
altair_web_server/altair_web_server/: web_server_node.py
altair_web_server/frontend/: index.html
altair_web_server/frontend/css/: styles.css
altair_web_server/frontend/js/: app.js  gamepad.js
can_msgs/: CMakeLists.txt  package.xml
docs/: architecture.md  behavior_programming_guide.md  can_specification.md  robot_kinematics_guide.md  setup_guide_nuc.md
install/: local_setup.sh  setup.sh
install/altair_can_bridge/lib/altair_can_bridge/: can_bridge_node
install/altair_can_bridge/share/altair_can_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/altair_can_bridge/share/altair_can_bridge/cmake/: altair_can_bridgeConfig-version.cmake  altair_can_bridgeConfig.cmake
install/altair_can_bridge/share/altair_can_bridge/environment/: ament_prefix_path.dsv  path.dsv
install/altair_can_bridge/share/altair_can_bridge/scripts/: setup_slcan.sh
install/altair_core/lib/altair_core/: module_manager
install/altair_core/share/altair_core/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/altair_core/share/altair_core/config/: modules_config.json
install/altair_core/share/altair_core/profiles/: arm_test_profile.json  base_only_profile.json  default_profile.json
install/altair_interfaces/share/altair_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/altair_interfaces/share/altair_interfaces/cmake/: altair_interfacesConfig-version.cmake  altair_interfacesConfig.cmake  altair_interfaces__rosidl_typesupport_cExport-noconfig.cmake  altair_interfaces__rosidl_typesupport_cExport.cmake  altair_interfaces__rosidl_typesupport_cppExport.cmake  altair_interfaces__rosidl_typesupport_introspection_cExport.cmake  ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_altair_interfaces__rosidl_generator_cExport.cmake  rosidl_cmake-extras.cmake  (+4 more)
install/altair_web_server/lib/altair_web_server/: web_server_node
install/altair_web_server/share/altair_web_server/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
profiles/: hoge.json  test.json
user_behaviors/: blockly_behavior.py  blockly_workspace.xml  example_behavior.py
wiki_setup/: Architecture.md  Behavior_Programming_Guide.md  CAN_Specification.md  Home.md  Kinematics_Guide.md  NUC_Setup_Guide.md  _Sidebar.md
(+212 files in other folders)
