<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_xml_model.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>altair_core</name>
  <version>1.0.0</version>
  <description>操縦者PC側：高レベルモジュール管理、状態遷移、およびユーザー動作プログラムランナー</description>
  <maintainer email="106no@users.noreply.github.com">USER</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>can_msgs</depend>
  <depend>altair_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
